refactor: 로고 이미지 URL만 가져오도록 수정 및 코드 가독성 개선
- api path 수정
- 로고 사진에 대한 url만 가져오게 변경
- 코드 가독성 향상 위한 수정
- 코드 컨텐션 통일을 위한 공백 추가 및 삭제